Filter fields will no longer wrap

--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -55,6 +55,7 @@
     position: relative;
     padding: 0 15px 0 3px;
     margin: 8px 0;
+    white-space: nowrap;
 
     > .control-label {
       float: left;
